--- a/src/Modules/Laser.Orchard.AdminToolbarExtensions/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.AdminToolbarExtensions/App_Data/Localization/it-IT/orchard.module.po
@@ -22,7 +22,7 @@ msgstr "L'URL Personalizzato è una serie di parametri da aggiungere alla query 
 
 msgctxt "~/Modules/Laser.Orchard.AdminToolbarExtensions/Views/EditorTemplates/SummaryAdminToolbarLabel.cshtml"
 msgid "Action"
-msgstr "Action"
+msgstr "Azione"
 
 msgctxt "~/Modules/Laser.Orchard.AdminToolbarExtensions/Views/EditorTemplates/SummaryAdminToolbarLabel.cshtml"
 msgid "Area"
