--- a/src/Modules/Laser.Orchard.ShareLink/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.ShareLink/App_Data/Localization/it-IT/orchard.module.po
@@ -34,7 +34,7 @@ msgstr "Consenti all'utente la selezione di un testo da condividere"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/DefinitionTemplates/ShareLinkPartSettingVM.cshtml"
 msgid "Link"
-msgstr "Link"
+msgstr "Collegamento"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/DefinitionTemplates/ShareLinkPartSettingVM.cshtml"
 msgid "Link to share"
@@ -94,7 +94,7 @@ msgstr "Lista di immagini"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/EditorTemplates/Parts/ShareLink.cshtml"
 msgid "Link"
-msgstr "Link"
+msgstr "Collegamento"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/EditorTemplates/Parts/ShareLink.cshtml"
 msgid "Sharing"
@@ -118,7 +118,7 @@ msgstr "Fb_appId"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/EditorTemplates/Parts/ShareLinkModuleSetting.cshtml"
 msgid "Link"
-msgstr "Link"
+msgstr "Collegamento"
 
 msgctxt "~/Modules/Laser.Orchard.ShareLink/Views/EditorTemplates/Parts/ShareLinkModuleSetting.cshtml"
 msgid "Link to share"
