--- a/src/Modules/Laser.Orchard.UserProfiler/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.UserProfiler/App_Data/Localization/it-IT/orchard.module.po
@@ -30,7 +30,7 @@ msgstr "Nessuno"
 
 msgctxt "Laser.Orchard.UserProfiler.Projections.UserTrackingFilterForm"
 msgid "Or"
-msgstr "O"
+msgstr "Oppure"
 
 msgctxt "Laser.Orchard.UserProfiler.Projections.UserTrackingFilterForm"
 msgid "Tag"
