--- a/src/Modules/Laser.Orchard.Vimeo/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Vimeo/App_Data/Localization/it-IT/orchard.module.po
@@ -154,7 +154,7 @@ msgstr "Token di accesso autorizzato"
 
 msgctxt "Laser.Orchard.Vimeo.Activities.VimeoVideoActivity"
 msgid "Done"
-msgstr "Fatto"
+msgstr "Completato"
 
 msgctxt "Laser.Orchard.Vimeo.Activities.VimeoVideoActivity"
 msgid "Vimeo"
