--- a/src/Themes/Laser.ECommerce/App_Data/Localization/it-IT/orchard.theme.po
+++ b/src/Themes/Laser.ECommerce/App_Data/Localization/it-IT/orchard.theme.po
@@ -90,7 +90,7 @@ msgstr "Azienda"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/AddressForm.cshtml"
 msgid "Country"
-msgstr "Stato"
+msgstr "Nazione"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/AddressForm.cshtml"
 msgid "First Name"
@@ -142,7 +142,7 @@ msgstr "Seleziona il tuo Paese dall'elenco."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/AddressForm.cshtml"
 msgid "State, province, prefecture, republic or region"
-msgstr "Stato, provincia, prefettura, repubblica o regione"
+msgstr "Provincia"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/AddressForm.cshtml"
 msgid "Stored Billing Address"
@@ -174,7 +174,7 @@ msgstr "Caricamento in corso..."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Braintree/Index.cshtml"
 msgid "Pay now"
-msgstr "Paga adesso"
+msgstr "Paga ora"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Braintree/Index.cshtml"
 msgid "Pay with Braintree and PayPal"
@@ -198,7 +198,7 @@ msgstr "Azienda"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/CommerceAddressForm.cshtml"
 msgid "Country"
-msgstr "Stato"
+msgstr "Nazione"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/CommerceAddressForm.cshtml"
 msgid "First Name"
@@ -222,7 +222,7 @@ msgstr "Codice postale o ZIP"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/CommerceAddressForm.cshtml"
 msgid "State, province, prefecture, republic or region"
-msgstr "Stato, provincia, prefettura, repubblica o regione"
+msgstr "Provincia"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/CommerceAddressForm.cshtml"
 msgid "Title"
@@ -238,7 +238,7 @@ msgstr "Lasciare vuoto per gli Stati Uniti d'America."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Fields.ContentPicker-RelatedProducts.cshtml"
 msgid "No content items."
-msgstr "Nessun contenuto."
+msgstr "Nessun elemento di contenuto."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Fields.ContentPicker-RelatedProducts.cshtml"
 msgid "Related Products"
@@ -262,11 +262,11 @@ msgstr "Registra"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/LogOnForm.cshtml"
 msgid "Lost your Password?"
-msgstr "Hai dimenticato la tua password?"
+msgstr "Hai perso la tua Password?"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/LogOnForm.cshtml"
 msgid "Remember Me"
-msgstr "Ricordami"
+msgstr "Ricorda le mie credenziali di accesso"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/LogOnForm.cshtml"
 msgid "Sign In"
@@ -298,15 +298,15 @@ msgstr "Questo account utente verrà collegato a <b>{0}</b> quando effettui l'ac
 
 msgctxt "~/Themes/Laser.ECommerce/Views/OpenAuthLogonForm.cshtml"
 msgid "Login was unsuccessful. Please correct the errors and try again."
-msgstr "La login non è riuscita. Correggere gli errori e riprovare."
+msgstr "Accesso non effettuato. Correggi gli errori e riprova."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/OpenAuthLogonForm.cshtml"
 msgid "Lost your Password?"
-msgstr "Hai dimenticato la tua password?"
+msgstr "Hai perso la tua Password?"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/OpenAuthLogonForm.cshtml"
 msgid "Remember Me"
-msgstr "Ricordami"
+msgstr "Ricorda le mie credenziali di accesso"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/OpenAuthLogonForm.cshtml"
 msgid "Sign In"
@@ -338,11 +338,11 @@ msgstr "Questo account utente verrà collegato a <b>{0}</b> quando effettui l'ac
 
 msgctxt "~/Themes/Laser.ECommerce/Views/OpenAuthRegisterForm.cshtml"
 msgid "Account creation was unsuccessful. Please correct the errors and try again."
-msgstr "La creazione dell'account non è riuscita. Correggere gli errori e riprovare."
+msgstr "Creazione utenza fallita. Correggi gli errori e riprova."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/OpenAuthRegisterForm.cshtml"
 msgid "Confirm password"
-msgstr "Conferma password"
+msgstr "Conferma la password"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/OpenAuthRegisterForm.cshtml"
 msgid "Email"
@@ -458,7 +458,7 @@ msgstr "Potrai visualizzare i dettagli del tuo ordine a questo indirizzo: <a hre
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Parts/ListOfWishLists.cshtml"
 msgid "Your Wish Lists:"
-msgstr "Le tue liste:"
+msgstr "Le tue Liste dei Desideri:"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Parts/Product.AdditionalInfo.Detail.cshtml"
 msgid "Product Information"
@@ -542,7 +542,7 @@ msgstr "Nessun commento."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Parts/Product.Reviews.Detail.cshtml"
 msgid "Rate:"
-msgstr "Vota:"
+msgstr "Voto:"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Parts/Product.Reviews.Detail.cshtml"
 msgid "Save"
@@ -642,7 +642,7 @@ msgstr "Errore"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Payment/Info.cshtml"
 msgid "Failed"
-msgstr "Fallito"
+msgstr "Operazione fallita"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/Payment/Info.cshtml"
 msgid "Outcome"
@@ -694,11 +694,11 @@ msgstr "Registra"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/RegisterForm.cshtml"
 msgid "Account creation was unsuccessful. Please correct the errors and try again."
-msgstr "La creazione dell'account non è riuscita. Correggere gli errori e riprovare."
+msgstr "Creazione utenza fallita. Correggi gli errori e riprova."
 
 msgctxt "~/Themes/Laser.ECommerce/Views/RegisterForm.cshtml"
 msgid "Confirm password"
-msgstr "Conferma password"
+msgstr "Conferma la password"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/RegisterForm.cshtml"
 msgid "Email"
@@ -814,7 +814,7 @@ msgstr "Il tuo carrello contiene:"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/ShoppingCart.Summary.cshtml"
 msgid "items"
-msgstr "Oggetti"
+msgstr "elementi"
 
 msgctxt "~/Themes/Laser.ECommerce/Views/ShoppingCartWidget.cshtml"
 msgid "Failed to load the cart"
