--- a/src/Modules/Laser.Orchard.HiddenFields/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.HiddenFields/App_Data/Localization/it-IT/orchard.module.po
@@ -10,7 +10,7 @@
 
 msgctxt "~/Modules/Laser.Orchard.HiddenFields/Views/DefinitionTemplates/HiddenStringFieldSettingsEventsViewModel.cshtml"
 msgid "Automatically regenerate when editing content"
-msgstr "Rigenera automaticamente il valore campo ad ogni aggiornamento del contenuto"
+msgstr "Rigenera automaticamente ad ogni modifica del contenuto"
 
 msgctxt "~/Modules/Laser.Orchard.HiddenFields/Views/DefinitionTemplates/HiddenStringFieldSettingsEventsViewModel.cshtml"
 msgid "Background bulk update"
@@ -22,7 +22,7 @@ msgstr "Seleziona per abilitare nel campo la sostituzione dei token."
 
 msgctxt "~/Modules/Laser.Orchard.HiddenFields/Views/DefinitionTemplates/HiddenStringFieldSettingsEventsViewModel.cshtml"
 msgid "Default value"
-msgstr "Valore di default"
+msgstr "Valore predefinito"
 
 msgctxt "~/Modules/Laser.Orchard.HiddenFields/Views/DefinitionTemplates/HiddenStringFieldSettingsEventsViewModel.cshtml"
 msgid "Default value."
@@ -122,7 +122,7 @@ msgstr "NON termina con"
 
 msgctxt "Laser.Orchard.HiddenFields.FilterEditors.Forms.HiddenStringFieldFilterForm"
 msgid "Does not start with"
-msgstr "Inizia con"
+msgstr "Non inizia con"
 
 msgctxt "Laser.Orchard.HiddenFields.FilterEditors.Forms.HiddenStringFieldFilterForm"
 msgid "Ends with"
@@ -130,7 +130,7 @@ msgstr "Termina con"
 
 msgctxt "Laser.Orchard.HiddenFields.FilterEditors.Forms.HiddenStringFieldFilterForm"
 msgid "Enter the value the string should be."
-msgstr "Inserisci il valore previsto del campo"
+msgstr "Immettere il valore che la stringa dovrebbe avere."
 
 msgctxt "Laser.Orchard.HiddenFields.FilterEditors.Forms.HiddenStringFieldFilterForm"
 msgid "Is empty"
@@ -146,7 +146,7 @@ msgstr "NON è vuoto"
 
 msgctxt "Laser.Orchard.HiddenFields.FilterEditors.Forms.HiddenStringFieldFilterForm"
 msgid "Is not equal to"
-msgstr "NON è uguale"
+msgstr "Non è uguale a"
 
 msgctxt "Laser.Orchard.HiddenFields.FilterEditors.Forms.HiddenStringFieldFilterForm"
 msgid "Operator"
@@ -162,7 +162,7 @@ msgstr "Valore"
 
 msgctxt "Laser.Orchard.HiddenFields.Projections.HiddenStringFieldFilter"
 msgid "{0} Content Fields"
-msgstr "{0} Campi di contenuto"
+msgstr "Campi del contenuto {0}"
 
 msgctxt "Laser.Orchard.HiddenFields.Projections.HiddenStringFieldFilter"
 msgid "{0} property for {1}"
@@ -170,11 +170,11 @@ msgstr "{0} proprietà di {1}"
 
 msgctxt "Laser.Orchard.HiddenFields.Projections.HiddenStringFieldFilter"
 msgid "Content Fields for {0}"
-msgstr "Campo di {0}"
+msgstr "Campi di contenuto per {0}"
 
 msgctxt "Laser.Orchard.HiddenFields.Projections.HiddenStringFieldFilter"
 msgid "Field {0} {1} \"{2}\""
-msgstr "Campo (Field) {0} {1} \"{2}\""
+msgstr "Campo {0} {1} \"{2}\""
 
 msgctxt "Laser.Orchard.HiddenFields.Services.HiddenFieldService"
 msgid "Edit all {0} hidden string fields"
