--- a/src/Modules/Laser.Orchard.InsertStuff/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.InsertStuff/App_Data/Localization/it-IT/orchard.module.po
@@ -38,7 +38,7 @@ msgstr "Fogli stile"
 
 msgctxt "Laser.Orchard.InsertStuff.Drivers.InsertStuffFieldDriver"
 msgid "The selected values of the field."
-msgstr "I valori selezionati nel campo"
+msgstr "I valori del campo selezionati."
 
 msgctxt "Laser.Orchard.InsertStuff.Drivers.InsertStuffFieldDriver"
 msgid "Value"
