--- a/src/Modules/Laser.Orchard.RazorScripting/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.RazorScripting/App_Data/Localization/it-IT/orchard.module.po
@@ -14,7 +14,7 @@ msgstr "Script"
 
 msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorValidationPartSettings.cshtml"
 msgid "The script to run everytime the content item is edited. You can use ContentItem, Services, WorkContext, T() and AddModelError()."
-msgstr "Lo script che viene eseguito ogni volta che un contenuto è modificato. Si possono usare: ContentItem, Services, WorkContext, T() and AddModelError()."
+msgstr "Lo script viene eseguito ogni volta che l'elemento di contenuto è stato modificato. È possibile utilizzare ContentItem, Services, WorkContext, T() e AddModelError()."
 
 msgctxt "~/Modules/Laser.Orchard.RazorScripting/Views/DefinitionTemplates/RazorValidationPartSettings.cshtml"
 msgid "The script to run everytime the content item is edited. You can use Model.ContentItem, Model.OrchardServices, Model.T(), Model.Tokens. If the script returns a NOT empty string, the part assumes that the content is in error."
@@ -22,7 +22,7 @@ msgstr "Script da eseguire durante l'aggiornamento del contenuto. Si possono usa
 
 msgctxt "Laser.Orchard.RazorScripting.Activities.RazorDecisionActivity"
 msgid "Evaluates an expression."
-msgstr "Valuta un'espressione"
+msgstr "Valuta un'espressione."
 
 msgctxt "Laser.Orchard.RazorScripting.Activities.RazorDecisionActivity"
 msgid "Misc"
@@ -34,7 +34,7 @@ msgstr "È necessario fornire uno Script"
 
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "A comma-separated list of possible outcomes."
-msgstr "Un una lista di possibili risultati, separati da una virgola."
+msgstr "Un elenco separato da virgole dei possibili risultati."
 
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "A name for the razor that explain what it does."
@@ -42,7 +42,7 @@ msgstr "Un nome per il razor che spiega cosa fa."
 
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "Possible Outcomes."
-msgstr "Possibili risultati."
+msgstr "Possibili Esiti."
 
 msgctxt "Laser.Orchard.RazorScripting.Forms.RazorDecisionForms"
 msgid "Razor name."
